z-index fixed
z-index for sidebar, body--overlay fixed
z-index for pages/courses/_javascript register button fixed

z-index for navbar fixed

--- a/assets/scss/pages/_my-account.scss
+++ b/assets/scss/pages/_my-account.scss
@@ -3,7 +3,6 @@
     background-color:$gray-clr-7;
     padding:$account-logo-padding 1rem 5rem;
     max-width:100%;
-    z-index:-1;
 
     @include breakpoint(xl) { 
       padding:$account-logo-padding 3rem;
@@ -15,6 +14,7 @@
       border:1px solid $gray-clr-5;
       border-radius:7px;
       margin:1rem auto;
+
       @include breakpoint(sm) { max-width:80vw; }
       @include breakpoint(md) { max-width:95vw; }
       @include breakpoint(lg) { max-width:100rem; }
